add products/uos20 to support UnionTech OS Server 20

--- a/.github/workflows/gate.yaml
+++ b/.github/workflows/gate.yaml
@@ -28,6 +28,7 @@ jobs:
               rhel7 \
               rhel8 \
               rhel9 \
+              uos20 \
               --derivatives
       - name: Test
         run: ctest -j2 --output-on-failure -E unique-stigids
@@ -44,7 +45,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build
-        run: ./build_product alinux2 alinux3 chromium fedora firefox fuse6 rhcos4 rhel7 rhel8 rhel9 sle12 sle15 ubuntu2004
+        run: ./build_product alinux2 alinux3 chromium fedora firefox fuse6 rhcos4 rhel7 rhel8 rhel9 sle12 sle15 ubuntu2004 uos20
       - name: Test
         run: ctest -j2 --output-on-failure -E unique-stigids
         working-directory: ./build
@@ -97,7 +98,8 @@ jobs:
               rhel9 \
               sle12 \
               sle15 \
-              ubuntu2004
+              ubuntu2004 \
+              uos20
       - name: Test
         run: ctest -j2 --output-on-failure -E unique-stigids
         working-directory: ./build
@@ -130,6 +132,7 @@ jobs:
               sle12 \
               sle15 \
               ubuntu2004 \
+              uos20 \
               ocp4 \
               eks
         env:
@@ -175,6 +178,7 @@ jobs:
                 sle12 \
                 sle15 \
                 ubuntu2004 \
+                uos20 \
                 ocp4
       -   name: Test
           run: ctest -j2 --output-on-failure -E unique-stigids
